# ZK-InherIt

./: LICENSE  README.md
backend/: Cargo.toml  start.sh  stop.sh
backend/src/: main.rs  pdf_service.rs  types.rs
contracts/: .env
contracts/broadcast/Deploy.s.sol/11155111/: run-1758917838.json  run-1758936242.json
contracts/broadcast/DeploySelfHumanVerifier.s.sol/11142220/: run-1758954177.json  run-1758974697.json
contracts/cache/Deploy.s.sol/11155111/: run-1758917838.json
will/: INTEGRATION_GUIDE.md  Nargo.toml  Prover.toml  README.md
will/src/: main.nr
