[package]
name = "zk-afterlife-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization (pinned to avoid serde_core build script timeout on newer versions)
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1.0.114"

# PDF processing
pdf-extract = "0.7"
hex = "0.4"

# Crypto and hashing
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
futures = "0.3"

# File handling
bytes = "1.0"
mime_guess = "2.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
